# matrix-runtime

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod
.github/workflows/: ci.yml  pages.yml  sync-hf-space.yml
api/: audit.go  auth_test.go  cloud_test.go  handlers_auth.go  handlers_cloud.go  handlers_health.go  handlers_jobs.go  handlers_matrixshell.go  handlers_models.go  handlers_platform.go  handlers_sandbox.go  handlers_system.go  middleware_auth.go  middleware_ratelimit.go  models_test.go  openapi.go  openapi.yaml  production_test.go  server.go  server_test.go
clients/python/: README.md  pyproject.toml
clients/python/src/matrixcloud/: __init__.py  cli.py  client.py  config.py  errors.py
clients/python/tests/: test_client.py
cmd/matrix-runtime/: main.go  main_test.go
deploy/docker-compose/: .env.example  docker-compose.yml
deploy/hf-space/: Dockerfile  README.md  SETUP.md
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
deploy/systemd/: matrix-runtime.env.example  matrix-runtime.service.in
docs/: architecture.md  auth.md  configuration.md  console.md  deploy-free.md  hosted-cloud.md  index.html  install-docker.md  install-hf-space.md  install-hybrid.md  install-kubernetes.md  install-local.md  install-onprem.md  production-checklist.md  refactor-from-matrixhub-ai.md  screenshots.md  security.md
docs/assets/: site.css  site.js
examples/: README.md
examples/catalog/: filesystem-mcp.json  github-mcp.json  qwen-model.json
examples/jobs/: mcp-test-filesystem.json  (+1 more)
hf/: Dockerfile  README.md  requirements.txt
legacy/: README.md
scripts/: build-web.sh  deploy-hf-space.sh  dev.sh  install.sh  join.sh  screenshots.mjs  smoke-test.sh  uninstall.sh
web/: embed.go
(+103 files in other folders)
