[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matrixcloud"
version = "0.1.0"
description = "Official Python client and CLI for Matrix Cloud / Matrix Runtime."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "agent-matrix" }]
keywords = ["matrix", "matrixcloud", "mcp", "ai", "agents", "runtime", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
matrixcloud = "matrixcloud.cli:app"
mxc = "matrixcloud.cli:app"

[project.urls]
Homepage = "https://github.com/agent-matrix/matrix-runtime"
Repository = "https://github.com/agent-matrix/matrix-runtime"
Documentation = "https://github.com/agent-matrix/matrix-runtime/blob/main/docs/console.md"

[tool.hatch.build.targets.wheel]
packages = ["src/matrixcloud"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# Keep typing compatible with Python 3.9 + Typer's runtime hint resolution
# (X | None / list[...] break Typer on 3.9), so skip the pyupgrade typing rules.
ignore = ["E501", "UP006", "UP007", "UP035", "UP037", "UP045"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
